# mas2xm

./: ACKNOWLEDGMENTS.md  CMakeLists.txt  LICENSE  README.md  TEST_TOOLS.md
src/: effects.c  effects.h  io_util.c  io_util.h  main.c  mas_read.c  mas_read.h  types.h  xm_write.c  xm_write.h
test/: batch_test.sh  check_all_samp.c  check_inst.c  check_inst2.c  check_samp.c  check_vib.c  check_xm.c  cmp_orders.c  cmp_patt.c  count_hdr.c  debug_dump.c  full_cmp.c  quick_orders.c  roundtrip_test.c  trace_patt.c  trace_write.c
